--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@ document.addEventListener('DOMContentLoaded', function(e) {
               <p>Daniel works with data, mostly in R, PostgreSQL and
               GitLab/GitHub.</p>
               <p>He holds a PhD from <a href="https://www.uu.nl/use">U.S.E.</a> and is currently
-              employed at <a href="https://quis.de/">QUIS</a>.</p>
+              employed at <a href="https://www.tk.de/en">Die
+              Techniker</a>.</p>
             </div>
             <div class="col-11 mt-3 text-center d-block d-sm-none">
               <p>Daniel works with data, mostly in R, PostgreSQL and
               GitLab/GitHub.</p>
               <p>He holds a PhD from <a href="https://www.uu.nl/use">U.S.E.</a> and is currently
-              employed at <a href="https://quis.de/">QUIS</a>.</p>
+              employed at <a href="https://www.tk.de/en">Die
+              Techniker</a>.</p>
             </div>
           </div>
 
