--- a/index.html
+++ b/index.html
@@ -51,18 +51,14 @@ document.addEventListener('DOMContentLoaded', function(e) {
           </div>
           <div class="row justify-content-center align-items-center">
             <div class="col-6 mt-3 text-center d-none d-sm-block">
-              <p>Daniel works with data, mostly in R, PostgreSQL and
-              GitLab/GitHub.</p>
+              <p>Daniel works with data in R, SQL and Python.</p>
               <p>He holds a PhD from <a href="https://www.uu.nl/use">U.S.E.</a> and is currently
-              employed at <a href="https://www.tk.de/en">Die
-              Techniker</a>.</p>
+              employed at <a href="https://www.tk.de/en">TK</a>.</p>
             </div>
             <div class="col-11 mt-3 text-center d-block d-sm-none">
-              <p>Daniel works with data, mostly in R, PostgreSQL and
-              GitLab/GitHub.</p>
+              <p>Daniel works with data in R, SQL and Python.</p>
               <p>He holds a PhD from <a href="https://www.uu.nl/use">U.S.E.</a> and is currently
-              employed at <a href="https://www.tk.de/en">Die
-              Techniker</a>.</p>
+              employed at <a href="https://www.tk.de/en">TK</a>.</p>
             </div>
           </div>
 
